--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,9 +54,24 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
 
+
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.1
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/ic_launcher.png"
+  min_sdk_android: 23 # android min sdk min:16, default 21
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/ic_launcher.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -64,6 +79,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -86,6 +102,7 @@ flutter:
       - assets/images/item_fourth.png
       - assets/images/profile_pic.png
       - assets/images/shreelogo.jpg
+      - assets/images/ic_launcher.png
       - assets/animations/splash.json
 
     fonts:
@@ -137,3 +154,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
