--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   firebase_storage: ^12.3.5
   image_picker: ^1.1.2
   intl: ^0.19.0
+  geolocator: ^13.0.2
+  permission_handler: ^11.3.1
 
 
 
@@ -105,6 +107,7 @@ flutter:
       - assets/images/shreelogo.jpg
       - assets/images/ic_launcher.png
       - assets/animations/splash.json
+      - assets/animations/Payment_success.json
 
     fonts:
       - family: Lora
